# django-landelayo

./: README.md  requirements-tests.txt  requirements.in  requirements.txt  setup.cfg
.github/workflows/: landelayo.yml
docs/calendar/: calendar.md
docs/event/: event.md
docs/upcoming/: upcoming.md
landelayo/: admin.py  apps.py  enum.py  exceptions.py  forms.py  models.py  occurrences.py  serializers.py  settings.py  urls.py  utils.py  views.py
landelayo/migrations/: 0001_initial.py  0002_alter_event_content_type_alter_event_object_id.py  0003_alter_occurrence_object_id.py  0004_alter_occurrence_content_type.py
openapi/: schema.yaml
tests/: serializer.py  test_settings.py  tests.py  urls.py
