[metadata]
name = django-landelayo
version = 1.0.1
description = 'A set of django rest apis to manage your calendar'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StandaloneDynamics/django-landelayo
author = Menzi Mthembu
license = GPL v3.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3.0 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include-package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    django >= 4.2
    djangorestframework >= 3.14
    django_enumfield >= 3.1

[options.packages.find]
exclude=
    tests*